# desafio-ipm

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  env  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 711d9f9f0706_.py
models/: random_forest_model.joblib  scaler.joblib
notebooks/: prova.ipynb
src/api/: adapter.py  app.py  composers.py  config.py  controllers.py  error_mapper.py  http.py  middleware.py  routes.py
src/auth/: jwt_access_token.py  jwt_secret_key.py  password.py
src/domain/entity/: user.py
src/infra/config/: engine.py  session_manager.py  url_connections.py
src/infra/model/: models.py
src/infra/repository/: base_repository.py  repositories.py
src/ml/: model.py  scaler.py
src/services/: login_services.py  ml_services.py  user_services.py
