[project]
name = "desafio-ipm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "fastapi>=0.136.1",
    "joblib>=1.5.3",
    "load-dotenv>=0.1.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pyjwt>=2.12.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "uuid6>=2025.0.1",
    "uvicorn>=0.47.0",
]
